# oxenstored

./: Makefile  README.md
.github/workflows/: main.yml
gnt/: gnttab_stubs.c
mmap/: xenmmap_stubs.c
ocaml-evtchn/lib/: dune  eventchn_stubs.c
oxenstored/: config.ml  connection.ml  connections.ml  domains.ml  dune  logging.ml  perms.ml  poll.ml  poll.mli  process.ml  stdext.ml  store.ml  transaction.ml  trie.ml  utils.ml  xenstored.ml
oxenstored/testing_status/: testing_status.ml
tests/: dune  testing_status.ml  unit_tests.ml
xenbus/: op.ml  op.mli  xb.ml  xb.mli  xs_ring.ml  xs_ring.mli
xsd_glue/domain_getinfo_plugin_v1/: domain_getinfo_stubs_v1.c
