(executable
 (modes native)
 (name xenstored)
 (modules
  (:standard \ syslog configure))
 (libraries unix xenbus xen-evtchn xen-evtchn-unix-minimal
            xengnt xenmmap syslog xsd_glue systemd
            dune-site dune-site.plugins))

(generate_sites_module
(module sites)
(plugins (oxenstored plugins)))

(install
 (package oxenstored)
 (section sbin)
 (files
  (xenstored.exe as oxenstored)))

(executable
  (modules configure)
  (name configure))

(rule
 (targets paths.ml)
 (deps paths.ml.in configure.exe)
 (action
 (with-stdout-to paths.ml
                 (run ./configure))))

(library
 (foreign_stubs (language c) (names syslog_stubs select_stubs))
 (modules syslog)
 (name syslog)
 (wrapped false)
 (libraries unix)
 (no_dynlink))
