(copy_files# (only_sources true) (files ../oxenstored/*.ml{,i}))
(copy_files# ../ocaml-evtchn/lib/eventchn_stubs.c)

(library
 (name evtchn_mock)
 (modules eventchn)
 (libraries unix)
 (wrapped false))

(library
 (name evtchn_unix_mock)
 (modules Unix_activations_minimal)
 (foreign_stubs (language c) (names eventchn_stubs))
 (c_library_flags -lxenctrl)
 (libraries evtchn_mock unix)
 (wrapped false))

(test
 (modes native)
 (name unit_tests)
 (modules (:standard \ syslog unix_activations_minimal eventchn))
 (package oxenstored)
 (libraries unix syslog alcotest fmt
            systemd xengnt xenbus xenmmap
            evtchn_mock evtchn_unix_mock
            xsd_glue dynlink dune-site dune-site.plugins))
