(library
 (name xen_evtchn)
 (public_name xen-evtchn)
 (modules Eventchn Generation)
 (wrapped false))

(library
 (name xen_evtchn_unix_minimal)
 (public_name xen-evtchn-unix-minimal)
 (modules Unix_activations_minimal)
 (foreign_stubs (language c) (names eventchn_stubs))
 (c_library_flags -lxenevtchn)
 (libraries xen-evtchn)
 (wrapped false))

(library
 (name xen_evtchn_unix)
 (public_name xen-evtchn-unix)
 (modules Unix_activations)
 (optional)
 (libraries unix lwt lwt-dllist lwt.unix bigarray
            xen-evtchn-unix-minimal)
 (wrapped false))
